--- a/actividades/css/11_display/actividad1.html
+++ b/actividades/css/11_display/actividad1.html
@@ -13,7 +13,7 @@
 
         .parrafo-horizontal {
             display: inline-block;
-            margin-right: 20px; /* Espacio entre párrafos */
+            margin-right: 20px; 
         }
     </style>
 </head>
