--- a/actividades/css/listas.html
+++ b/actividades/css/listas.html
@@ -7,9 +7,10 @@
 </head>
 <a href="../actividadescss.html">Inicio</a>
 <body>
-    <h2>Margin</h2>
-    <a href="12_margin/actividad1.html">Actividad 1</a>
-    <a href="12_margin/actividad2.html">Actividad 2</a>
-    <a href="12_margin/actividad3.html">Actividad 3</a>
+    <h2>Listas</h2>
+    <a href="16_listas/actividad1.html">Actividad 1</a>
+    <a href="16_listas/actividad2.html">Actividad 2</a>
+    <a href="16_listas/actividad3.html">Actividad 3</a>
+    <a href="16_listas/actividad4.html">Actividad 4</a>
 </body>
 </html>
