--- a/actividades/css/padding.html
+++ b/actividades/css/padding.html
@@ -7,9 +7,9 @@
 </head>
 <a href="../actividadescss.html">Inicio</a>
 <body>
-    <h2>Margin</h2>
-    <a href="12_margin/actividad1.html">Actividad 1</a>
-    <a href="12_margin/actividad2.html">Actividad 2</a>
-    <a href="12_margin/actividad3.html">Actividad 3</a>
+    <h2>Padding</h2>
+    <a href="13_padding/actividad1.html">Actividad 1</a>
+    <a href="13_padding/actividad2.html">Actividad 2</a>
+    <a href="13_padding/actividad3.html">Actividad 3</a>
 </body>
 </html>
