--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -14,5 +14,12 @@
     <a href="css/color.html"><h2>Color</h2></a>
     <a href="css/texto.html"><h2>Texto</h2></a>
     <a href="css/medidas.html"><h2>Medidas</h2></a>
+    <a href="css/imagenes.html"><h2>Imagenes</h2></a>
+    <a href="css/display.html"><h2>Display</h2></a>
+    <a href="css/margin.html"><h2>Margin</h2></a>
+    <a href="css/padding.html"><h2>Padding</h2></a>
+    <a href="css/border.html"><h2>Border</h2></a>
+    <a href="css/listas.html"><h2>Listas</h2></a>
+    <a href="css/overflow.html"><h2>Overflow</h2></a>
 </body>
 </html>
