--- a/actividades/css/overflow.html
+++ b/actividades/css/overflow.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-
-    </style>
 </head>
 <a href="../actividadescss.html">Inicio</a>
 <body>
-    <h2>BEM</h2>
-    <a href="06_bem/actividad1.html">Actividad 1</a>
+    <h2>Overflow</h2>
+    <a href="17_overflow/actividad1.html">Actividad 1</a>
     <br><br>
-    <a href="06_bem/actividad2.html">Actividad 2</a>
+    <a href="17_overflow/actividad2.html">Actividad 2</a>
 </body>
 </html>
