--- a/actividades/css/imagenes.html
+++ b/actividades/css/imagenes.html
@@ -9,5 +9,7 @@
 <body>
    <h2>Imagenes</h2> 
    <a href="10_imagenes/actividad1.html">Actividad 1</a>
+   <br><br>
+   <a href="10_imagenes/actividad2.html">Actividad 2</a>
 </body>
 </html>
