--- a/actividades/actividades.html
+++ b/actividades/actividades.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        :root {
+            background-color: rgb(240, 166, 6);
+           
+        }
+        a {
+            font-size: 33px;
+        }
+        
+    </style>
 </head>
 <a href="../">Inicio</a>
 <body>
     <H1>HTML</H1>
-   <a href="html/formato.html"> <h2>Formato</h2></a>
-   <a href="html/hipervinculos.html"><H2>Hipervinculos</H2></a>
-   <a href="html/listas.html"><h2>Listas</h2></a>
-   <a href="html/imagenes.html"><h2>Imagenes</h2></a>
-   <a href="html/tablas.html"><h2>Tablas</h2></a>
-   <a href="html/formularios.html"><h2>Formularios</h2></a>
-   <a href="html/multimedia.html"><h2>Multimedia</h2></a>
-   <a href="html/contenido.html"><h2>Contenido</h2></a>
-   <a href="html/interactivos.html"><h2>Interactivos</h2></a>
+    <ul>
+        <li><a href="html/formato.html">Formato</a></li>
+        <li><a href="html/hipervinculos.html">Hipervinculos</a></li>
+        <li><a href="html/listas.html">Listas</a></li>
+        <li><a href="html/imagenes.html">Imagenes</a></li>
+        <li><a href="html/tablas.html">Tablas</a></li>
+        <li><a href="html/formularios.html">Formularios</a></li>
+        <li><a href="html/multimedia.html">Multimedia</a></li>
+        <li><a href="html/contenido.html">Contenido</a></li>
+        <li><a href="html/interactivos.html">Interactivos</a></li>
+        </ul>
 </body>
 </html>
