--- a/actividades/css/20_transform/actividad2.html
+++ b/actividades/css/20_transform/actividad2.html
@@ -8,6 +8,7 @@
         .modal {
     display: inline-block;
     padding: 10px;
+    color: white;
     background-color: black;
     border: 1px solid black;
   }
