--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../">Inicio</a>
+<a href="../actividades/actividadescss.html">Inicio</a>
 <body>
     <h1>CSS</h1>
     <a href="css/selectores.html"><h2>Selectores</h2></a>
