--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../actividades/actividadescss.html">Inicio</a>
+<a href="../index.html">Inicio</a>
 <body>
     <h1>CSS</h1>
     <a href="css/selectores.html"><h2>Selectores</h2></a>
@@ -21,5 +21,6 @@
     <a href="css/border.html"><h2>Border</h2></a>
     <a href="css/listas.html"><h2>Listas</h2></a>
     <a href="css/overflow.html"><h2>Overflow</h2></a>
+    <a href="css/filters.html"><h2>Filters</h2></a>
 </body>
 </html>
