--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -22,5 +22,7 @@
     <a href="css/listas.html"><h2>Listas</h2></a>
     <a href="css/overflow.html"><h2>Overflow</h2></a>
     <a href="css/filters.html"><h2>Filters</h2></a>
+    <a href="css/transform.html"><h2>Transform</h2></a>
+    <a href="css/transition.html"><h2>Transition</h2></a>
 </body>
 </html>
