--- a/actividades/css/21_transition/actividad1.html
+++ b/actividades/css/21_transition/actividad1.html
@@ -1,14 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    .campo {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  transition: border-color 0.3s, transform 0.3s;
+}
+
+input:focus {
+  border-color: transparent;
+  transform: scale(1.05);
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: transparent;
+  color: #007bff;
+}
+
+  </style>
 </head>
 <body>
-    
+  <form>
+    <div class="campo">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre">
+    </div>
+    <div class="campo">
+      <label for="telefono">Teléfono:</label>
+      <input type="number" id="telefono" name="telefono">
+    </div>
+    <button type="submit">Enviar</button>
+  </form>
 </body>
 </html>
