--- a/actividades/actividades.html
+++ b/actividades/actividades.html
@@ -15,7 +15,7 @@
         
     </style>
 </head>
-<a href="../actividades/actividades.html">Inicio</a>
+<a href="../">Inicio</a>
 <body>
     <H1>HTML</H1>
     <ul>
