--- a/actividades/html/formato.html
+++ b/actividades/html/formato.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
+<a href="../actividades.html">Inicio</a>
 <body>
     <h2>Formato</h2>
     <a href="02_formato/actividad1.html">actividad 1</a>
