--- a/actividades/html/formato.html
+++ b/actividades/html/formato.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+    </style>
 </head>
 <a href="../actividades.html">Inicio</a>
 <body>
     <h2>Formato</h2>
-    <a href="02_formato/actividad1.html">actividad 1</a>
-    <br><br>
-    <a href="02_formato/actividad2.html">actividad 2</a>
-    <br><br>
-    <a href="02_formato/actividad3.html">actividad 3</a>
-    <br><br>
-    <a href="02_formato/actividad4.html">actividad 4</a>
-    <br><br>
-    <a href="02_formato/actividad5.html">actividad 5</a>
-    <br><br>
-    <a href="02_formato/actividad6.html">actividad 6</a>
-    <br><br>
-    <a href="02_formato/actividad7.html">actividad 7</a>
-
+    <a href="02_formato/actividad1.html">Actividad 1</a>
+    <a href="02_formato/actividad2.html">Actividad 2</a>
+    <a href="02_formato/actividad3.html">Actividad 3</a>
+    <a href="02_formato/actividad4.html">Actividad 4</a>
+    <a href="02_formato/actividad5.html">Actividad 5</a>
+    <a href="02_formato/actividad6.html">Actividad 6</a>
+    <a href="02_formato/actividad7.html">Actividad 7</a>
+</body>
 </html>
