--- a/actividades/html/multimedia.html
+++ b/actividades/html/multimedia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../activitats.html">Inicio</a>
+<a href="../actividades.html">Inicio</a>
 <body>
     <h2>Multimedia</h2>
     <a href="08_multimedia/actividad1.html">Actividad 1</a>
