--- a/actividades/html/formato.html
+++ b/actividades/html/formato.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-
+:root {
+            background-color: rgb(5, 247, 255);
+           
+        }
+        a {
+            font-size: 33px;
+        }
     </style>
 </head>
 <a href="../actividades.html">Inicio</a>
