--- a/actividades/html/formato.html
+++ b/actividades/html/formato.html
@@ -7,7 +7,7 @@
     <style>
 :root {
             background-color: rgb(5, 247, 255);
-           
+           opacity: 0.5;
         }
         a {
             font-size: 33px;
