--- a/actividades/html/multimedia.html
+++ b/actividades/html/multimedia.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        :root {
+            background-color: rgb(5, 247, 255);
+           opacity: 0.5;
+        }
+        a {
+            font-size: 33px;
+        }
+    </style>
 </head>
 <a href="../actividades.html">Inicio</a>
 <body>
