--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        :root {
+            background-color: rgb(240, 166, 6);
+           
+        }
+        a {
+            font-size: 33px;
+        }
+    </style>
 </head>
 <a href="../index.html">Inicio</a>
 <body>
@@ -24,5 +33,7 @@
     <a href="css/filters.html"><h2>Filters</h2></a>
     <a href="css/transform.html"><h2>Transform</h2></a>
     <a href="css/transition.html"><h2>Transition</h2></a>
+    <a href="css/animation.html"><h2>Animation</h2></a>
+    <a href="css/3d.html"><h2>3D</h2></a>
 </body>
 </html>
