--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -9,31 +9,30 @@
             background-color: rgb(240, 166, 6);
            
         }
-        a {
-            font-size: 33px;
-        }
     </style>
 </head>
 <a href="../index.html">Inicio</a>
 <body>
     <h1>CSS</h1>
-    <a href="css/selectores.html"><h2>Selectores</h2></a>
-    <a href="css/variables.html"><h2>Variables</h2></a>
-    <a href="css/bem.html"><h2>BEM</h2></a>
-    <a href="css/color.html"><h2>Color</h2></a>
-    <a href="css/texto.html"><h2>Texto</h2></a>
-    <a href="css/medidas.html"><h2>Medidas</h2></a>
-    <a href="css/imagenes.html"><h2>Imagenes</h2></a>
-    <a href="css/display.html"><h2>Display</h2></a>
-    <a href="css/margin.html"><h2>Margin</h2></a>
-    <a href="css/padding.html"><h2>Padding</h2></a>
-    <a href="css/border.html"><h2>Border</h2></a>
-    <a href="css/listas.html"><h2>Listas</h2></a>
-    <a href="css/overflow.html"><h2>Overflow</h2></a>
-    <a href="css/filters.html"><h2>Filters</h2></a>
-    <a href="css/transform.html"><h2>Transform</h2></a>
-    <a href="css/transition.html"><h2>Transition</h2></a>
-    <a href="css/animation.html"><h2>Animation</h2></a>
-    <a href="css/3d.html"><h2>3D</h2></a>
+    <ul>
+    <li><a href="css/selectores.html"><h2>Selectores</h2></a></li>
+    <li><a href="css/variables.html"><h2>Variables</h2></a></li>
+    <li><a href="css/bem.html"><h2>BEM</h2></a></li>
+    <li><a href="css/color.html"><h2>Color</h2></a></li>
+    <li><a href="css/texto.html"><h2>Texto</h2></a></li>
+    <li><a href="css/medidas.html"><h2>Medidas</h2></a></li>
+    <li><a href="css/imagenes.html"><h2>Imagenes</h2></a></li>
+    <li><a href="css/display.html"><h2>Display</h2></a></li>
+    <li><a href="css/margin.html"><h2>Margin</h2></a></li>
+    <li><a href="css/padding.html"><h2>Padding</h2></a></li>
+    <li><a href="css/border.html"><h2>Border</h2></a></li>
+    <li><a href="css/listas.html"><h2>Listas</h2></a></li>
+    <li><a href="css/overflow.html"><h2>Overflow</h2></a></li>
+    <li><a href="css/filters.html"><h2>Filters</h2></a></li>
+    <li><a href="css/transform.html"><h2>Transform</h2></a></li>
+    <li><a href="css/transition.html"><h2>Transition</h2></a></li>
+    <li><a href="css/animation.html"><h2>Animation</h2></a></li>
+    <li><a href="css/3d.html"><h2>3D</h2></a>
+    </ul>
 </body>
 </html>
