--- a/actividades/html/02_formato/actividad1.html
+++ b/actividades/html/02_formato/actividad1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../formato.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <p>Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi <br> tincidunt ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla aliquet<br> porttitor lacus, luctus accumsan tortor! <br> <br>
         porta lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor id eu nisl nunc mi <br>ipsum, faucibus vitae? Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.</p>
