--- a/index.html
+++ b/index.html
@@ -2,12 +2,104 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+
+nav ul {
+    list-style-type: none;
+    text-align: center;
+}
+nav ul li {
+    display: inline-block;
+}
+nav ul li a {
+    padding: 10px;
+    display: block;
+    box-sizing: content-box;
+    border: 4px solid black;
+    background-color: aliceblue;
+    color: black;
+    font-size: 30px;
+    border-radius: 10px;
+}
+
+
+h1 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+    box-sizing: content-box;
+    border: 4px solid black;
+    background-color: aliceblue;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.2);
+}
+
+a {
+    color: red;
+    text-decoration: none;
+    font-size: 20px;
+}
+p {
+    font-size: 25px;
+    font-style: Arial;
+}
+
+.mi-elemento {
+  margin-top: 10px;
+  margin-right: 50px;
+  margin-bottom: 10px;
+  margin-left: 50px;
+  text-align: justify;
+}
+
+.encabezado {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border: 2cap black;
+}
+
+.encabezado img {
+  height: 300px; 
+}
+
+img{
+    border-radius: 50px;
+    overflow: hidden;
+    border-right-color: black; 
+}
+.cuadre {
+  max-width: 1500px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  padding: 20px;
+  box-shadow: 10px 20px 4px rgba(0, 0, 0, 0.1);
+}
+
+</style>
+
+
+    <nav>
+        <ul>
+            <li><a href="actividades.html">Activitats</a></li>
+            <li><a href="actividades/curriculum.html">Curriculum</a></li>
+        </ul>
+    </nav>
 </head>
-<body>
-    <h1>MI PAGINA WEB :)</h1>
-   <a href="actividades/actividades.html"><h2>Actividades html</h2></a>
-   <a href="actividades/actividadescss.html"><h2>Actividades css</h2></a>
+
+<body style="background-color: lightsteelblue; 
+font-family: 'Arial'">
+<div class="mi-elemento">
+<div class="cuadre">
+    <h1>Portafoli - Adria Novell Duaso</h1>
+    <div class="encabezado">
+    <img src="foto/oscar novell (1).jpg" alt="foto">
+    </div>
+    <p>Hem dic Adria Novell Duaso, tinc 19 anys i estic estudiant un grau mitja de informatica al institut la caparrella de Lleida. <br>
+        Primero echo la leche y luego los cereales, como haria una persona en sus plenas facultades mentales.</p>
+</div>
+</div>  
 </body>
 </html>
