--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ font-family: 'Arial'">
     <div class="encabezado">
     <img src="foto/oscar novell (1).jpg" alt="foto">
     </div>
-    <p>Hem dic Adria Novell Duaso, tinc 19 anys i estic estudiant un grau mitja de informatica al institut la caparrella de Lleida. <br>
+    <p>Me llamo Adria Novell Duaso, tengo 19 años y estoy estudiando un grado medio de informatica en el instituto la caparrella de Lleida. <br>
         Primero echo la leche y luego los cereales, como haria una persona en sus plenas facultades mentales.</p>
 </div>
 </div>  
