--- a/actividades/css/07_color/actividad1.html
+++ b/actividades/css/07_color/actividad1.html
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<a href="../color.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
 <p> <strong>Eastman</strong> <span class="Kodak"> Kodak</span><strong> Company</strong> (popularmente conocida como <span class="Kodak">Kodak</span>) es una compañía<br>
 multinacional fundada el año <span class="año">1892</span> en los Estados Unidos dedicada al diseño,<br>
