--- a/actividades/css/07_color/actividad2.html
+++ b/actividades/css/07_color/actividad2.html
@@ -11,6 +11,7 @@
 }
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <p>
         Mi nombre es <span class="negro">Adria</span> y soy el agente con el número <span class="negro">555</span> en la misión <br>
