--- a/actividades/css/07_color/actividad3.html
+++ b/actividades/css/07_color/actividad3.html
@@ -27,6 +27,7 @@
         
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
    <h2><span class="rojo">SIMPLEST</span> <span class="rojonegrita">BLOG</span> </h2>
 
