--- a/actividades/css/08_texto/actividad5.html
+++ b/actividades/css/08_texto/actividad5.html
@@ -14,6 +14,7 @@
         }
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
    <p>Aquellas cacerías, sin embargo, acababan muchas veces en tragedia. Fue en uno de esos lances, por <br>
     ejemplo, donde el enigmático protagonista de esta novela, el capitán Ahab, <strong>perdió una pierna</strong>, la <br>
