--- a/actividades/css/09_medidas/actividad2.html
+++ b/actividades/css/09_medidas/actividad2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,6 +32,7 @@
         .parrafo-5 { width: 60%; }
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
 
     <p class="parrafo-1">Rodak se encogió de hombros, pero permaneció a su lado, dejando su brazo cerca por si ella necesitaba de su apoyo en algún momento.</p>
