--- a/actividades/css/13_padding/actividad2.html
+++ b/actividades/css/13_padding/actividad2.html
@@ -1,25 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<a href="../../../actividades.html">Inicio</a>
+<body>
+  
 <div style="font-family: Arial, sans-serif; font-size: 16px; text-align: center; text-align: justify;">
-    <h2 style="font-size: 24px; margin-bottom: 10px; color: #333; text-align: justify;">Premium</h2>
-    <p style="margin-top: 0; font-size: 18px; font-weight: bold; color: #555; text-align: justify;">Funciones avanzadas para<br>profesionales que necesitan <br>
-         más personalización</p>
-    <p style="font-size: 36px; font-weight: bold; color: white; margin-bottom: 10px; text-align: justify;">Desde <br>
-        <span style="text-decoration: line-through;"></span> <span style="font-size: 64px; text-align: justify;">$299</span>/mes <br>
-        basado en 10.000 contactos<sup style="font-size: 14px; text-align: justify;">*</sup></p>
-    <p style="font-size: 18px; color:aqua; margin-bottom: 10px; text-align: justify;">¿Cuántos contactos tienes?</p>
-    <button style="background-color: aqua; color: white; border: none; padding: 10px 20px; font-size: 18px; cursor: pointer; text-align: justify;">Compra ahora</button>
-    <p style="font-size: 18px; color: #333; margin-top: 30px; text-align: justify;">Todo lo que incluye el plan <br>
-         Standard, más:</p>
-    <ul style="list-style: none; padding: 0; margin: 0; text-align: justify;">
-      <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003; Segmentación <br>
-        avanzada</li>
-      <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003; Pruebas multivariantes</li>
-      <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003;Informes comparativos</li>
-      <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003;Puestos ilimitados y <br>
-        acceso basado en <br>
-         funciones</li>
-      <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003;Asistencia técnica telefónica</li>
-    </ul>
-    <br><br><br>
-    <a href="#" style="font-size: 20px; font-weight: bold; color: aqua; margin-top: 30px; text-align: justify;">Acerca de Premium</a>
-  </div>
+  <h2 style="font-size: 24px; margin-bottom: 10px; color: #333; text-align: justify;">Premium</h2>
+  <p style="margin-top: 0; font-size: 18px; font-weight: bold; color: #555; text-align: justify;">Funciones avanzadas para<br>profesionales que necesitan <br>
+       más personalización</p>
+  <p style="font-size: 36px; font-weight: bold; color: white; margin-bottom: 10px; text-align: justify;">Desde <br>
+      <span style="text-decoration: line-through;"></span> <span style="font-size: 64px; text-align: justify;">$299</span>/mes <br>
+      basado en 10.000 contactos<sup style="font-size: 14px; text-align: justify;">*</sup></p>
+  <p style="font-size: 18px; color:aqua; margin-bottom: 10px; text-align: justify;">¿Cuántos contactos tienes?</p>
+  <button style="background-color: aqua; color: white; border: none; padding: 10px 20px; font-size: 18px; cursor: pointer; text-align: justify;">Compra ahora</button>
+  <p style="font-size: 18px; color: #333; margin-top: 30px; text-align: justify;">Todo lo que incluye el plan <br>
+       Standard, más:</p>
+  <ul style="list-style: none; padding: 0; margin: 0; text-align: justify;">
+    <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003; Segmentación <br>
+      avanzada</li>
+    <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003; Pruebas multivariantes</li>
+    <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003;Informes comparativos</li>
+    <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003;Puestos ilimitados y <br>
+      acceso basado en <br>
+       funciones</li>
+    <li style="font-size: 16px; color: #333; padding: 5px 0; text-align: justify;">&#10003;Asistencia técnica telefónica</li>
+  </ul>
+  <br><br><br>
+  <a href="#" style="font-size: 20px; font-weight: bold; color: aqua; margin-top: 30px; text-align: justify;">Acerca de Premium</a>
+</div>
+</body>
+</html>
