--- a/actividades/css/14_border/actividad3.html
+++ b/actividades/css/14_border/actividad3.html
@@ -11,9 +11,22 @@
         border-radius: 25%;
         padding: 1.2rem;
 }
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.centered-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
-    <img src="../14_border/fotos/10-monstruo.png" width="150px" height="auto" alt="foto">
+    <img class="centered-image" src="../14_border/fotos/10-monstruo.png" width="150px" height="auto" alt="foto">
 </body>
 </html>
