--- a/actividades/css/14_border/actividad4.html
+++ b/actividades/css/14_border/actividad4.html
@@ -8,12 +8,26 @@
          img{
         border: 0.5rem solid;
         border-image: linear-gradient(aqua, red) 3; 
-        padding: 1.2rem;
+        padding: 1.2rem; 
 }
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.centered-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
-    <img src="../14_border/fotos/10-monstruo.png" width="150px" height="auto" alt="foto">
+    <img class="centered-image" src="../14_border/fotos/10-monstruo.png" width="150px" height="auto" alt="foto">
 </body>
 </html>
