--- a/actividades/html/02_formato/actividad2.html
+++ b/actividades/html/02_formato/actividad2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../formato.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <h1>Titulo principal con h1</h1>
     <p>Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper <br> morbi tincidunt ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla <br> porttitor lacus, luctus accumsan tortor!</p> <br>
