--- a/actividades/html/02_formato/actividad5.html
+++ b/actividades/html/02_formato/actividad5.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../formato.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <h1>Ejemplo uso de etiqueta <time></time></h1>
 <p>Me despierto cada mañana a las <time>7:00</time> de la mañana. <br>
