--- a/actividades/html/02_formato/actividad6.html
+++ b/actividades/html/02_formato/actividad6.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../formato.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <h1>Julio Verne</h1> <br>
 <strong>Jules Gabriel Verne,</strong> conocido en los países hispanohablantes como <strong>Julio Verne</strong> <br>
