--- a/actividades/html/03_hipervinculos/actividad2.html
+++ b/actividades/html/03_hipervinculos/actividad2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../hipervinculos.html"> Volver a inicio</a>
+    <a href="actividad1.html"> Volver a inicio</a>
     <h1>Menús <br> <br> Del día</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quos numquam magni <br>
          nesciunt molestiae et necessitatibus consequuntur cum repellendus, amet similique nam <br> quod aliquid quae deserunt commodi excepturi vero unde!</p>
