--- a/actividades/html/06_Tablas/actividad3.html
+++ b/actividades/html/06_Tablas/actividad3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../tablas.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <h1>Curriculum vitae</h1>
     <table>
