--- a/actividades/html/11_interactivos/actividad2.html
+++ b/actividades/html/11_interactivos/actividad2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../interactivos.html"> Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <header><h1>Buscador de smartphone</h1></header>
     <label>Marca de smartphone:
