--- a/actividades/html/11_interactivos/actividad3.html
+++ b/actividades/html/11_interactivos/actividad3.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   
 </head>
-<a href="../interactivos.html"> Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
 
   <h1>Curriculum Vitae</h1>
