--- a/actividades/css/03_selectores/actividad2.html
+++ b/actividades/css/03_selectores/actividad2.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
     <head>
 	<meta charset="UTF-8">
 	<title>Mis vacaciones</title>
     </head>
+    <a href="../../../actividades.html">Inicio</a>
     <body>
         <style>
  .titulo {
