--- a/actividades/css/10_imagenes/actividad1.html
+++ b/actividades/css/10_imagenes/actividad1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -60,6 +60,7 @@
         }
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
 
     <div class="chat">
