--- a/actividades/css/13_padding/actividad3.html
+++ b/actividades/css/13_padding/actividad3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <style>
     .comentario {
             border: 1px solid black;
