--- a/actividades/html/02_formato/actividad3.html
+++ b/actividades/html/02_formato/actividad3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../formato.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <h1>Aqui estoy gastando h1</h1> <br>
 <h2>Aqui estoy gastando h2</h2> <br>
