--- a/actividades/html/02_formato/actividad4.html
+++ b/actividades/html/02_formato/actividad4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../formato.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <h1>Actualidad</h1>
 <P>La <strong>sintáxis HTML</strong> es altamente demandado en el actual <i>panorama tecnológico</i> </P>
