--- a/actividades/html/05_imagenes/actividad4.html
+++ b/actividades/html/05_imagenes/actividad4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../imagenes.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <H1>Torrijas con leche</H1>
     
