--- a/actividades/html/07_formularios/actividad2.html
+++ b/actividades/html/07_formularios/actividad2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../formularios.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
 
     <h2>Formulario de Pedido de Altavoces</h2>
