--- a/actividades/html/07_formularios/actividad4.html
+++ b/actividades/html/07_formularios/actividad4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../formularios.html">Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <form action="actividad4.html">
         <h2>Buscar Cámaras de Fotos</h2>
