--- a/actividades/html/11_interactivos/actividad1.html
+++ b/actividades/html/11_interactivos/actividad1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<a href="../interactivos.html"> Inicio</a>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <h1>El Museo del Prado</h1>
     <h2>Cuadro de el Descendimiento</h2>
