--- a/actividades.html
+++ b/actividades.html
@@ -53,6 +53,10 @@ nav ul li a {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    border: 0.4rem solid;
+    border-image: linear-gradient(rgb(252, 185, 1), red) 3; 
+         
+
 }
 
 .column h2 {
