--- a/actividades/css/17_overflow/actividad2.html
+++ b/actividades/css/17_overflow/actividad2.html
@@ -50,6 +50,7 @@ table td {
 }
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <div class="tabla">
         <div class="tablascroll">
