--- a/actividades/css/19_filters/actividad1.html
+++ b/actividades/css/19_filters/actividad1.html
@@ -11,7 +11,9 @@
         }
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
+    <br>
     <img src="fotos/782681856_235038553_1706x960.webp" alt="foto tigre" class="grayscale">
 </body>
 </html>
