--- a/actividades/css/19_filters/actividad2.html
+++ b/actividades/css/19_filters/actividad2.html
@@ -18,6 +18,7 @@
 }
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <img src="fotos/640px-Human-Skeleton.jpg" alt="esqueleto" class="esqueleto">
 </body>
