--- a/actividades/css/22_animation/actividad1.html
+++ b/actividades/css/22_animation/actividad1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,15 @@
   height: 100vh;
   overflow: hidden;
 }
+.top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    }
 
 .sol {
   position: absolute;
@@ -49,6 +58,7 @@
 
 </style>
 </head>
+<a class="top" href="../../../actividades.html">Inicio</a>
 <body>
   <div class="contenedor">
     <div class="sol"></div>
