--- a/actividades/css/22_animation/actividad3.html
+++ b/actividades/css/22_animation/actividad3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,15 @@
   margin: 0;
   padding: 0;
 }
-
+.top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    }
 #cookie-banner-toggle {
   display: none;
 }
@@ -56,6 +64,7 @@
 
   </style>
 </head>
+<a class="top" href="../../../actividades.html">Inicio</a>
 <body>
   <input type="checkbox" id="cookie-banner-toggle">
   <div id="cookie-banner">
@@ -64,6 +73,7 @@
   </div>
 
   <div class="main-content">
+    <br><br>
     hola buenas
   </div>
 </body>
