--- a/actividades/css/22_animation/actividad4.html
+++ b/actividades/css/22_animation/actividad4.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-   
+   .top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+   }
    body {
   display: flex;
   justify-content: center;
@@ -87,6 +95,7 @@
 
   </style>
 </head>
+<a class="top" href="../../../actividades.html">Inicio</a>
 <body>
   <div class="reloj">
     <div class="hora"></div>
