--- a/actividades/css/23_3D/actividad2.html
+++ b/actividades/css/23_3D/actividad2.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-
+.top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    }
+    .centered-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
     </style>
 </head>
+<a class="top" href="../../../actividades.html">Inicio</a>
 <body>
-  <img src="fotos/Captura.PNG" alt="foto">
+  <br>
+  <img class="centered-image" src="fotos/Captura.PNG" alt="foto">
 </body>
 </html>
