--- a/actividades/css/04_variables/actividad1.html
+++ b/actividades/css/04_variables/actividad1.html
@@ -25,7 +25,7 @@
 <body>
     <h1>Hola</h1>
     <p>
-      Para poder volver al inicio,<a href="../../actividadescss.html">clica aqui</a>, para ir a la siguiente actividad <a href="actividad2.html">clica aqui</a>
+      Para poder volver al inicio,<a href="../../../actividades.html">clica aqui</a>, para ir a la siguiente actividad <a href="actividad2.html">clica aqui</a>
     </p>
 </body>
 </html>
