--- a/actividades/css/07_color/actividad3.html
+++ b/actividades/css/07_color/actividad3.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+    background-color: white;
+}
          .comentario {
             border: 1px solid #ccc;
             padding: 10px;
