--- a/actividades/css/16_listas/actividad3.html
+++ b/actividades/css/16_listas/actividad3.html
@@ -20,6 +20,7 @@ div:hover {
 }
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <ul>
         <div> <li><a href="#">Productos</a></li></div>
