--- a/actividades/css/20_transform/actividad2.html
+++ b/actividades/css/20_transform/actividad2.html
@@ -19,6 +19,7 @@
      
     </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
     <div class="modal">
         <div>Hola</div>
