--- a/actividades/css/21_transition/actividad1.html
+++ b/actividades/css/21_transition/actividad1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,6 +43,7 @@ button:hover {
 
   </style>
 </head>
+<a href="../../../actividades.html">Inicio</a>
 <body>
   <form>
     <div class="campo">
