--- a/actividades/css/22_animation/actividad2.html
+++ b/actividades/css/22_animation/actividad2.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+   .top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    }
     body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #0b3961;
 }
 
 .noria {
@@ -82,6 +90,7 @@
 
   </style>
 </head>
+<a class="top" href="../../../actividades.html">Inicio</a>
 <body>
   <div class="noria">
     <div class="eje"></div>
