--- a/actividades/css/22_animation/actividad5.html
+++ b/actividades/css/22_animation/actividad5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,15 @@
   justify-content: center;
   flex-direction: column;
 }
-
+.top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    }
 .loader {
   border: 4px solid rgba(0, 0, 0, 0.1);
   border-left-color: #333;
@@ -34,6 +42,7 @@
 
     </style>
 </head>
+<a class="top" href="../../../actividades.html">Inicio</a>
 <body>
     <div class="loader-container">
         <div class="loader"></div>
