--- a/actividades/css/22_animation/actividad6.html
+++ b/actividades/css/22_animation/actividad6.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Péndulo</title>
   <style>
+    .top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    }
     body {
       display: flex;
       justify-content: center;
@@ -54,6 +63,7 @@
     }
   </style>
 </head>
+<a class="top" href="../../../actividades.html">Inicio</a>
 <body>
   <div class="pendulum">
     <div class="bar"></div>
