--- a/actividades/css/23_3D/actividad1.html
+++ b/actividades/css/23_3D/actividad1.html
@@ -5,6 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hover en 3D</title>
 <style>
+  .top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+  }
   body {
     display: flex;
     justify-content: center;
@@ -14,20 +23,21 @@
   }
 
   .container {
-    perspective: 1000px; /* Define la perspectiva para el efecto 3D */
+    perspective: 1000px; 
   }
 
   .image {
     width: 300px;
     height: 200px;
-    transition: transform 0.5s; /* Transición suave para el cambio de transformación */
+    transition: transform 0.5s; 
   }
 
   .image:hover {
-    transform: rotateY(30deg); /* Rotación en el eje Y al pasar el ratón por encima */
+    transform: rotateY(30deg); 
   }
 </style>
 </head>
+<a class="top" href="../../../actividades.html">Inicio</a>
 <body>
 <div class="container">
   <img class="image" src="fotos/cube-3116778-1280.png" alt="Imagen">
