--- a/actividades.html
+++ b/actividades.html
@@ -95,6 +95,9 @@ ul li::before {
 ul li:hover {
     background-color: #f9f9f9;
 }
+h3 {
+    margin-left: 10px;
+}
 
 
 @media (max-width: 768px) {
